[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "driftguard-agent"
version = "0.1.0"
description = "Automated data quality & drift detection agent"
readme = "README.md"
license = "AGPL-3.0"
requires-python = ">=3.10"
authors = [
    { name = "DriftGuard Team" }
]
keywords = ["data-quality", "monitoring", "observability", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: System :: Monitoring",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "httpx>=0.25",
    "croniter>=2.0",
    "rich>=13.0",
    "sqlalchemy>=2.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]
mysql = ["pymysql>=1.1"]
clickhouse = ["clickhouse-driver>=0.2"]
all = [
    "psycopg2-binary>=2.9",
    "pymysql>=1.1",
    "clickhouse-driver>=0.2",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1",
    "mypy>=1.0",
    "types-PyYAML",
    "types-croniter",
]

[project.scripts]
driftguard = "driftguard.cli.main:cli"

[project.urls]
Homepage = "https://github.com/kiku-jw/DriftGuard"
Documentation = "https://github.com/kiku-jw/DriftGuard#readme"
Repository = "https://github.com/kiku-jw/DriftGuard"

[tool.hatch.build.targets.wheel]
packages = ["src/driftguard"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["driftguard"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "driftguard.cli.*"
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/driftguard"]
branch = true

[tool.coverage.report]
fail_under = 80
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
